resolved mobile spacing issue on resume page

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,10 @@
   margin: 20px 0px 20px 0px;
 }
 
+.spacing-gap {
+  height: 20vh;
+}
+
 .resume-org {
   display: flex;
   flex-wrap: wrap;
